src/main/java/com/example/obrestdata_jpa/Error/BookNotFoundException.java
package com.example.obrestdata_jpa.Error;

public class BookNotFoundException extends RuntimeException {

    public BookNotFoundException(String message) {
        super(message);
    }
}
